@@ -160,8 +160,9 @@ Set the
 .I "piece length"
 value for torrent file.
 .IP "\-\-bt\-announce"
-Set tracker announcement url for torrent file.
-Note that this url doesn't change BTIH hash.
+Add a tracker announce URL to the created torrent file(s).
+This option can be passed mutltiple times to add several urls.
+Note that this option doesn't change the BTIH hash.
 .IP "\-\-benchmark\-raw"
 Switch benchmark output format to be a machine\(hyreadable tab\(hydelimited text
 with hash function name, speed, cpu clocks per byte.
