@@ -1,3 +1,6 @@
+Wed Jul 30 2014 Aleksey
+	* support torrents with more than one announce url
+
 Tue Jul 29 2014 Aleksey
 	* LibRHash now exports torrent functions
 
